# desc-ldjsub

./: .gitignore  README.md  setup.cfg
desc/ldjsub/: __init__.py  ldjsub.py  ldjtest.py  version.py
