[metadata]
name = desc-ldjsub
version = 0.0.1
author = David Adams
author_email = dladams@bnl.gov
description = 'DESC label-driven job submission'
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/LSSTDESC/desc-ldjsub'
project_urls =
    Bug Tracker = 'https://github.com/LSSTDESC/desc-ldjsub/issues'
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]

[options.entry_points]
console_scripts =
    ldjsub-version=desc.ldjsub:main_version
    ldj-test=desc.ldjsub:main_ldjtest
    ldj-create-ldjtest=desc.ldjsub:main_create_ldjtest
    ldj-create=desc.ldjsub:main_ldj_create
    ldj-start=desc.ldjsub:main_ldj_start
